--- a/web/public/stylesheets/contact.css
+++ b/web/public/stylesheets/contact.css
@@ -14,7 +14,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  padding: 40px;
+  margin: 0;
 }
 
 /* Contenedor principal */
@@ -26,6 +26,7 @@ body {
   max-width: 1200px; /* Añadimos un ancho máximo para evitar que el contenido esté pegado a los bordes */
   min-height: 100vh;
   padding: 0 20px; /* Márgenes laterales */
+  margin: 0 auto;
 }
 
 /* Estructura general con grid */
@@ -35,6 +36,7 @@ body {
   gap: 40px;
   width: 100%;
   margin-bottom: 20px; /* Añadimos espacio para el footer */
+  flex-grow: 1;
 }
 
 .back-button {
@@ -96,6 +98,16 @@ body {
   font-size: 16px;
 }
 
+textarea {
+  resize: none; /* Desactiva el redimensionado */
+  width: 100%;
+  padding: 12px;
+  border-radius: 6px;
+  border: none;
+  background-color: #555;
+  color: #ebe8ff;
+}
+
 .support-form input,
 .support-form textarea {
   width: 100%;
@@ -146,6 +158,14 @@ body {
   font-size: 24px;
   margin-bottom: 10px;
 }
+.map-container {
+  width: 100%;
+  height: 300px; /* Controla la altura del mapa */
+  margin-top: 20px; /* Espacio entre la dirección y el mapa */
+  border: 2px solid #42ab47; /* Opcional: agregar borde alrededor del mapa */
+  border-radius: 8px;
+  overflow: hidden;
+}
 
 .maps-link {
   font-size: 16px;
@@ -181,8 +201,9 @@ body {
   background-color: #2b2a29;
   border-top: 2px solid #42ab47;
   width: 100%; /* Asegura que ocupe todo el ancho */
-  margin-top: 40px; /* Separación del contenido */
   position: relative;
+  bottom: 0;
+  left: 0;
 }
 
 .footer .logo img {
